# esp-idf

components/driver/include/driver/: gpio.h
examples/system/ota/pre_encrypted_ota/: CMakeLists.txt  partitions.csv
examples/system/ota/pre_encrypted_ota/client_certs/: aws_client_cert.pem  aws_client_key.pem
examples/system/ota/pre_encrypted_ota/main/: CMakeLists.txt  aes.c  aes.h  app.c  app.h  ble.c  ble.h  device.c  device.h  gpio.c  gpio.h  misc.c  misc.h  mqtt.c  mqtt.h  nvs.c  nvs.h  ota.c  ota.h  pre_encrypted_ota.c  switch.c  switch.h  wifi.c  wifi.h
examples/system/ota/simple_ota_example/main/: simple_ota_example.c
examples/wifi/getting_started/station/main/: station_example_main.c
